# rust-app

./: .gitignore
.github/workflows/: build-release.yml  release.yml  test.yml
android-app/: build.gradle.kts  gradle.properties  local.properties
android-app/app/: build.gradle.kts
android-app/app/src/main/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/apptcheck/agent/: MainActivity.kt
android-app/app/src/main/java/com/apptcheck/agent/data/models/: ConfigModels.kt
android-app/app/src/main/java/com/apptcheck/agent/ui/: MainViewModel.kt
android-app/app/src/main/java/com/apptcheck/agent/ui/components/: CredentialEditor.kt  ScheduleStrikeDialog.kt
android-app/gradle/wrapper/: gradle-wrapper.properties
docs/api-reference/: api-docs.md
docs/product_requirement/: prd.md
docs/testing/: testing-plan.md
docs/ui-design/: ui-specification.md
rust-engine/: Cargo.toml  build.rs
rust-engine/src/: agent.udl  config.rs  lib.rs  scraper_engine.rs
src/: config.rs
