[package]
name = "rust-engine"
version = "3.2.0"
edition = "2021"
description = "High-performance native booking engine for Android"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_engine"

[dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.36", features = ["full", "rt", "macros"] }
futures = "0.3"

# Network & Perfect Mimicry (BoringSSL based)
# This provides the browser impersonation requested (JA3/JA4/HTTP2 fingerprints)
rquest = { version = "0.20", features = ["boringssl", "socks5", "gzip", "brotli"] }

# Mobile Bridge (Android JNI/Kotlin generation)
uniffi = { version = "0.25", features = ["tokio"] }

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTML Parsing (Equivalent to Go's goquery)
scraper = "0.19"

# Utilities
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[profile.release]
opt-level = "s"      # Optimize for size and speed for Android
lto = true           # Link Time Optimization
strip = true         # Remove debug symbols
codegen-units = 1
