[package]
name = "rust-engine"
version = "3.3.0"
edition = "2021"
description = "High-performance native booking engine for Android"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_engine"

[dependencies]
tokio = { version = "1.36", features = ["full", "rt", "macros"] }
futures = "0.3"
rquest = { version = "0.20", features = ["boringssl", "socks5", "gzip", "brotli"] }

# Downgraded to 0.24.3 for stable Android/CLI parity
uniffi = { version = "0.24.3", features = ["tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.19"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"

[build-dependencies]
# Build tool must match the library version exactly
uniffi_build = "0.24.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
